--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openbts-public (5.0.1) unstable; urgency=medium
+
+  * fixes deadlock - ed436d40
+
+ -- Endaga BuildBot <buildbot@endaga.com>  Tue, 23 Jun 2015 18:20:08 +0000
+
 openbts-public (5.0) unstable; urgency=low
 
     * Test
