--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openbts-public (5.0.7) unstable; urgency=medium
+
+  * rollback the L3 segfault fix and adds a timeout to sdcch to kill dead channels
+
+ -- Kurtis Heimerl <kheimerl@endaga.com>  Tue, 18 Aug 2015 10:43:51 -0700
+
 openbts-public (5.0.6) unstable; urgency=medium
 
   * Fixes a segfault when the L3 message is too short and an off-by-one error in the SMS parsing. 
